--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <title>portfolio</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header class="main-header">
@@ -14,21 +14,20 @@
             <div class="navbar-content">
              <ul class="navbar-items">
                 <li class="navbar-item">
-                    <a href="#">About</a>
+                    <a href="#">Home</a>
                 </li>
                 <li class="navbar-item">
                     <a href="#">Contact</a>
                 </li>
                 <li class="navbar-item">
-                    <a href="#">Projects</a>
+                    <a href="#">About</a>
                 </li>
                 <li class="navbar-item">
-                    <a href="#">home</a>
+                    <a href="#">projects</a>
                 </li>
              </ul>
              <div class="navbar-btn">
                 <a href="#">Register</a>
-                <a href="#">Hire Me</a>
              </div>
             </div>
         </nav>
