--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=
     , initial-scale=1.0">
     <title>portfolio</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header class="main-header">
@@ -43,7 +43,7 @@
         <a href="#" class="portfolio btn">Hire me</a>
             </div>
         <div class="image">
-            <img src="/bkg.jpg" alt="portfolio image">
+            <img src="bkg.jpg" alt="portfolio image">
         </div>
         </div>
     </section>
